welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
  var n:Int=getMondeHauteur()
  lire()
  recule(n)
}


def lire(){
	var couleurs=new Array[Color](n)
  for (i<- 1 to n-1){
    couleurs(i)=getCouleurSol()
    avance()
  }
  couleurs(n)=getCouleurSol()
}